--- a/docs/interni/verbali/2022_02_04_I/2022_02_04_I.tex
+++ b/docs/interni/verbali/2022_02_04_I/2022_02_04_I.tex
@@ -46,7 +46,7 @@ Verbale dell'incontro del 04/02/2022
 \subsection{Aggiornamento e scelte sui documenti}
 \begin{itemize}
     \item \textit{Analisi dei Requisiti}: verrà eseguita una revisione del documento da parte di tutti e sette i componenti del gruppo;
-    \item \textit{Analisi delle Tecnologie}: necessario un aggiornamento del documento per la modifica di alcune tecnologie.
+    \item \textit{Analisi delle Tecnologie}: necessario un aggiornamento del documento per la modifica di alcune tecnologie;
     \item \textit{Piano di Qualifica} e \textit{Piano di Progetto}: realizzazione e aggiornamento dei documenti.
 \end{itemize}
 \subsection{Organizzazione interna e suddivisione compiti}
@@ -56,14 +56,14 @@ Verbale dell'incontro del 04/02/2022
     \item Federico Marchi stila il verbale del 04/02/2022 e aggiorna il documento \textit{Analisi delle Tecnologie};
     \item Matteo Galvagni prosegue la realizzazione del POC;
     \item Alberto Nicoletti e Andrea Volpe si occuperanno del documento \textit{Analisi dei Requisiti} in particolare dei casi d'uso;
-    \item Elia Scandaletti esegue il documento \textit{Piano di Progetto};
+    \item Elia Scandaletti esegue il documento \textit{Piano di Progetto}.
 \end{itemize}
 
 \section{Impegni presi}
 \begin{itemize}
 \item Realizzare il POC;
 \item Stilare il verbale del 04/02/2022;
-\item Realizzare, aggiornare e revisionare i vari documenti;
+\item Realizzare, aggiornare e revisionare i vari documenti.
 \end{itemize}
 
 \end{document}
